[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/characters/properties/HealthBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/characters/Character.gd" type="Script" id=2]
[ext_resource path="res://src/characters/properties/AnimatedCharacter.gd" type="Script" id=3]
[ext_resource path="res://src/characters/ai/Follow.gd" type="Script" id=4]
[ext_resource path="res://assets/sprites/characters/sprite frames/skeleton.tres" type="SpriteFrames" id=5]
[ext_resource path="res://src/characters/ai/SimpleAttack.gd" type="Script" id=6]
[ext_resource path="res://src/characters/properties/Living.gd" type="Script" id=7]
[ext_resource path="res://src/characters/combat/Hitbox.gd" type="Script" id=8]
[ext_resource path="res://src/characters/combat/Attack.gd" type="Script" id=10]
[ext_resource path="res://assets/sprites/shadows/oval.png" type="Texture" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.94284, 1.63913 )

[sub_resource type="CircleShape2D" id=2]
radius = 39.9386

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5.39835, 16.0054 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4.35074, 10.0133 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 7
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="UI" type="Node2D" parent="." groups=[
"keep_scale",
]]

[node name="HealthBar" parent="UI" instance=ExtResource( 1 )]
margin_left = -8.0
margin_top = -21.0
margin_right = 8.0
margin_bottom = -19.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 14.4497 )
shape = SubResource( 1 )

[node name="SimpleAttack" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Follow" type="Node" parent="."]
script = ExtResource( 4 )
max_speed = 50

[node name="AnimatedCharacter" type="Node2D" parent="." groups=[
"keep_on_death",
]]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="AnimatedCharacter"]
modulate = Color( 0.5, 0.5, 0.5, 0.294118 )
position = Vector2( 0, 15 )
texture = ExtResource( 11 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="AnimatedCharacter"]
frames = ExtResource( 5 )
animation = "idle"

[node name="DetectionRadius" type="Area2D" parent="."]
input_pickable = false
monitorable = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRadius"]
shape = SubResource( 2 )

[node name="Living" type="Node" parent="."]
script = ExtResource( 7 )

[node name="Hitbox" type="Area2D" parent="." groups=[
"hitbox",
]]
input_pickable = false
monitoring = false
collision_layer = 16
collision_mask = 0
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 3 )

[node name="Attack" type="Area2D" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 8
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack"]
position = Vector2( 5.48835, 0 )
shape = SubResource( 4 )
[connection signal="state_changed" from="." to="AnimatedCharacter" method="_on_state_changed"]
[connection signal="attack" from="SimpleAttack" to="Attack" method="_on_attack"]
[connection signal="attack" from="SimpleAttack" to="." method="_on_attack"]
[connection signal="attack_finished" from="AnimatedCharacter" to="Attack" method="_on_attack_finished"]
[connection signal="attack_finished" from="AnimatedCharacter" to="." method="_on_attack_finished"]
[connection signal="animation_finished" from="AnimatedCharacter/AnimatedSprite" to="AnimatedCharacter" method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="DetectionRadius" to="SimpleAttack" method="set_target"]
[connection signal="body_entered" from="DetectionRadius" to="Follow" method="set_target"]
[connection signal="body_exited" from="DetectionRadius" to="SimpleAttack" method="remove_target"]
[connection signal="body_exited" from="DetectionRadius" to="Follow" method="remove_target"]
[connection signal="died" from="Living" to="." method="_on_death"]
[connection signal="health_updated" from="Living" to="UI/HealthBar" method="_on_health_updated"]
[connection signal="max_health_updated" from="Living" to="UI/HealthBar" method="_on_max_health_updated"]
[connection signal="take_damage" from="Hitbox" to="Living" method="_on_take_damage"]
